# gloo

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_origin.md
.circleci/: config.yml
docs/: algorithms.md  cuda.md  errors.md  latency.md  readme.md  rendezvous.md
gloo/: CMakeLists.txt  allreduce_ring.h  config.h.in  cuda.h  cuda_allreduce_ring.cc  cuda_collectives_host.h  cuda_collectives_native.h  cuda_private.cu  cuda_private.h  sophon.cc  sophon.h  sophon_allreduce_ring.cc  sophon_allreduce_ring.h  sophon_collectives_host.h
gloo/examples/: CMakeLists.txt  example_sophgo.cc  test_cuda.cc  test_sophgo.cc
gloo/sophgo/: CMakeLists.txt  context.cc  context.h  file_store.cc  file_store.h  hash_store.cc  hash_store.h  prefix_store.cc  prefix_store.h  redis_store.cc  redis_store.h  store.cc  store.h
gloo/transport/: CMakeLists.txt  context.cc  context.h  pair.h
sophon/: CMakeLists.txt  broadcast.cc  broadcast.h  gather.cc  gather.h  reduce.cc  reduce.h  scatter.cc  scatter.h  sophon_defines_2260.h
sophon/benchmark/: CMakeLists.txt  benchmark.h  cuda_main.cc  main.cc  options.cc  options.h  runner.cc  runner.h  timer.h
sophon/examples/: CMakeLists.txt  example1.cc  example_allreduce.cc  example_reduce.cc  looks_like_mpi.cc  test_cuda.cc  test_sophgo.cc
sophon/rendezvous/: store.cc
sophon/test/: CMakeLists.txt  allgather_test.cc  allgatherv_test.cc  allreduce_test.cc  alltoall_test.cc  alltoallv_test.cc  barrier_test.cc  base_test.cc  base_test.h  broadcast_test.cc  buffer_test.cc  context_factory_test.cc  cuda_allreduce_test.cc  gather_test.cc  (+17 more)
(+33 files in other folders)
